# template

./: CMakeLists.txt  README.md  TODO  core.hpp  dependencies  main.cpp  run.sh.in
doxygen/: CMakeLists.txt  doxyfile  doxyfile.in
include/: errors.hpp  globals.hpp  includes.hpp  messages.hpp  types.hpp  utility.hpp
includes/: constants.hpp  errors.hpp  includes.hpp  messages.hpp  types.hpp  utility.hpp
lib/lib_logger/: CMakeLists.txt  logger.cpp  logger.hpp
source/: utility.cpp
unit_test/: CMakeLists.txt  test_main.cpp
